# Cen

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  main.cpp
include/Cen/: AssetManager.h  Camera.h  Engine.h  Light.h  Material.h  Model.h  Renderer.h  Scene.h  Transform.h
include/Cen/ui/: AssetManagerWindow.h  GuiWorkspace.h  ImageWidget.h  ProfileWindow.h  RenderGraphWindow.h  SceneWindow.h  SettingsWindow.h  StatisticsWindow.h  ViewportWindow.h  Window.h
res/materials/: pbr.mat
res/materials/blinn_phong/: blinn_phong.mat  lit.glsl  loadMaterial.glsl
res/materials/pbr/: lit.glsl  loadMaterial.glsl  pbr.mat
res/pipelines/: visibility_material.pipeline
res/shaders/: cen.glsl  cull_meshes.comp  cull_meshlets.comp  default.frag  default.mesh  default.vert  output_indirect.comp  sky.comp  tonemap.comp  write_mesh_command.comp  write_meshlet_command.comp
res/shaders/bloom/: composite.comp  downsample.comp  upsample.comp
res/shaders/debug/: frustum.vert  materialId.comp  meshId.comp  meshletId.comp  primitiveId.comp  solid_colour.frag  wireframe_solid.comp
res/shaders/util/: mouse_pick.comp  util.glsl
res/shaders/visibility_buffer/: visibility.frag  visibility.glsl  visibility_material.comp
src/: AssetManager.cpp  Camera.cpp  Engine.cpp  Light.cpp  Material.cpp  Model.cpp  Renderer.cpp  Scene.cpp  Transform.cpp
src/passes/: BloomPass.cpp  BloomPass.h  DebugPasses.cpp  DebugPasses.h  MeshletDrawPass.cpp  MeshletDrawPass.h  MeshletsCullPass.cpp  MeshletsCullPass.h
src/ui/: AssetManagerWindow.cpp  GuiWorkspace.cpp  ImageWidget.cpp  ProfileWindow.cpp  RenderGraphWindow.cpp  SceneWindow.cpp  SettingsWindow.cpp  StatisticsWindow.cpp  ViewportWindow.cpp
